# acs-hit-level-analytics

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cicd.yml
docs/: aws-setup.md  cicd.md  deployment.md  operations.md
docs/business_presentation/: Adobe ACS - Search Keyword Revenue Analytics.key
docs/requirements/: Adobe Assessment -  Revenue by Search Engines - Requirements and Clarification Tracker.numbers  Adobe Assessment -  Revenue by Search Engines - Requirements and Clarification Tracker.tsv
infrastructure/: skr-deployer-policy.json  template.yaml
src/: requirements.txt
src/search_keyword_revenue/: __init__.py  cli.py  config.py  lambda_handler.py  parser.py  writer.py
src/search_keyword_revenue/spark/: __init__.py  cli.py  job.py
tests/: conftest.py  test_cli.py  test_integration.py  test_parser.py  test_writer.py
