[project]
name = "acs-hit-level-analytics"
version = "0.1.0"
description = "Adobe ACS Analytics: E-commerce revenue to search engine keywords."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=3.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.10",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
