[project]
name = "acs-hit-level-analytics"
version = "0.1.0"
description = "Adobe ACS Analytics: E-commerce revenue to search engine keywords."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=3.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.10",
    "pip-audit>=2.10.0",
    "pandas-stubs>=3.0.0.260204",
]

[project.scripts]
skr = "search_keyword_revenue.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# -- setuptools --
[tool.setuptools.packages.find]
where = ["src"]

# -- pytest --
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

# -- coverage --
[tool.coverage.run]
source = ["search_keyword_revenue"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
omit = [
    "tests/*",
    "infrastructure/*",
]

# -- ruff --
[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
